# vulkan-tutorial-tests

./: README.md
start/: Makefile  a.out  compile.bat  first_app.cpp  first_app.hpp  lve_pipeline.cpp  lve_pipeline.hpp  lve_window.cpp  lve_window.hpp  main.cpp
start/shaders/: simple_shader.frag  simple_shader.vert
test/: Makefile  test.cpp
vulkan-tutorial/drawing-a-triangle/: HelloTriangleApplication.cpp  Makefile
vulkan-tutorial/drawing-a-triangle/shaders/: simple_shader.vert
vulkan-tutorial/test/: makefile  test.cpp
vulkan-tutorial/triangle-clion/: CMakeLists.txt  triangle.cpp
